--- a/posts/divida_publica/index.qmd
+++ b/posts/divida_publica/index.qmd
@@ -225,7 +225,7 @@ Portanto, ao eliminar a dívida externa a dívida pública do Brasil ficou mais 
 import yfinance as yf
 
 dolar = yf.download('BRL=X', start='1994-07-01', end='2021-12-31')
-dolar = dolar['Adj Close'].resample('Y').last().dropna()
+dolar = dolar['Close'].resample('Y').last().dropna()
 ```
 
 ```{python}
